--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
 	<link rel="stylesheet" type="text/css" href="estilo.css">
 
     </head>
+	
+	<header>
+	<p>
+		Adrián Jarabo Navarrete
+	</p>
+    <nav>
+        <ul>
+		<li><a href="#">GitHub</a></li>
+		<li><a href="#">LinkedIn</a></li>
+	 </ul>
+    </nav>
+</header>
 
     <body>
         
