--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
 
         <a name="Introducción">
         <div> <H1>¿Quien es Adrián Jarabo Navarrete?</H1> </div>
-          
+           <div>
             	<p>Adrián Jarabo Navarrete tiene 26 años, nació el 27 de junio de 1996, y actualmente vive en Madrid (España)</p>
 
 		<p>Tiene un perfil informático multidisciplinar, abarcando desde un perfil más como programador / desarrollador desde bajo nivel como ensamblador (ARM), VHDL o Cobol hasta alto nivel como C++, Python o Rust.</p>
 
 		<p>Además de que se maneja con soltura como Administrador de Sistemas y Redes</p>
-
-		<h2>¿ Que lenguaje de programación se maneja Adrián Jarabo Navarrete?</h2>
-
+	</div>
+		<div> <h2>¿ Que lenguaje de programación se maneja Adrián Jarabo Navarrete?</h2> </div>
+	<div>
 		<ul>
 		    <li>Código máquina: Ensamblador / ARM</li>
 		    <li>Lenguaje de Descripción de Hardware : VHDL</li>
@@ -55,9 +55,10 @@
 		    <li>Programación Móvil : Kotlin (Android)</li>
 		    <li>Cobol</li>
 		</ul>
+		</div>
 
-		<h2>¿Qué Otros Conocimientos Posee Adrián Jarabo Navarrete?</h2>
-
+		<div><h2>¿Qué Otros Conocimientos Posee Adrián Jarabo Navarrete?</h2></div>
+		<div>
 		<ul>
 		    <li>Sistemas de Monitoreo : Zabbix y Patrol</li>
 		    <li>Gestión de Equipos y Servidores Windows, en proceso de sacarse la licencia de Azure</li>
@@ -69,12 +70,49 @@
 		    <li><a>Planificación, Despliegue y Configuración de WiFi, telefonía Móvil, antenas y fibra óptica</a></li>
 		    <li>Programación y Automatización en WhatsApp Business API</li>
 		</ul>
+		</div>	
 
-		<h2>¿Qué Proyectos ha realizado Adrián Jarabo Navarrete?</h2>
-
+		<div><h2>¿Qué Proyectos ha realizado Adrián Jarabo Navarrete?</h2></div>
+		
+		<div>
 		<ol>
 		    <li>Creación de ChatBot en WhatsApp API para importante empresa multinacional del país</li>
 		    <li>Lector OCR, que comprobaba el código con la BBDD y si había coincidencia lo mostraba por pantalla.</li>
 		</ol>
+		</div>
+		
+		<div><h2>¿Cual es la experiencia labboral de Adrián Jarabo Navarrete?</h2></div>
+		<div>
+		<ul>
+		    <li>
+			    <h3>Tecnico Microinformático en AENA</h3>
+			    <br>
+			    <h4>Empresa: COS Mantenimiento</h4>
+			    <br>
+			    <h4>del 11 de mayo de 2022 al 18 de julio de2022</h4>
+			    
+			</li>
+			
+		    <li>
+			    <h3>Técnico Informático Junior</h3>
+			    <br>
+			    <h4>Empresa: Density Networks</h4>
+			    <br>
+			    <h4>de diciembre del 2021 a mayo de 2022</h4>
+			</li>
+		    <li>Director del departamento de informática</li>
+			
+			<li>
+			    <h3>Director del departamento de informática</h3>
+			    <br>
+			    <h4>Empresa: Parque del Hielo S.L.U (Franquicia del Grupo McDonald's</h4>
+			    <br>
+			    <h4>de julio de 2018 a diciembre de 2021</h4>
+			</li>
+		    <li>Director del departamento de informática</li>
+		</ul>
+		</div>	
+
+		
     </body>
 </html>
