--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
 		<p>Tiene un perfil informático multidisciplinar, abarcando desde un perfil más como programador / desarrollador desde bajo nivel como ensamblador (ARM), VHDL o Cobol hasta alto nivel como C++, Python o Rust.</p>
 
 		<p>Además de que se maneja con soltura como Administrador de Sistemas y Redes</p>
+		   
+		 <button type="button">LinkedIn/button>
+		 <button type="button">Github</button>
 	</div>
 		<div> <h2>¿ Que lenguaje de programación se maneja Adrián Jarabo Navarrete?</h2> </div>
 	<div>
