--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 		<p>Además de que se maneja con soltura como Administrador de Sistemas y Redes</p>
 		   
-		 <button type="button">LinkedIn/button>
+		 <button type="button">LinkedIn</button>
 		 <button type="button">Github</button>
 	</div>
 		<div> <h2>¿ Que lenguaje de programación se maneja Adrián Jarabo Navarrete?</h2> </div>
